Plain renaming Data Exchange for Source Sync, Import for Sync, importData for syncConfig
